# embed-db-template-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  STUBS.md  TEMPLATE.md  cargo-generate.toml  clippy.toml  deny.toml  pre-generate.rhai
.github/workflows/: ci.yml
benches/: scaffold.rs
docs/: API.md
examples/: basic.rs
src/: db.rs  error.rs  lib.rs
tests/: smoke.rs
